# smart_home

./: .gitignore  .gitmodules  CMakeLists.old  CMakeLists.txt  build.bat  build_all.bat  build_paho_mqtt_cpp.bat  build_x32.bat  build_x64.bat  narodmon_mqtt_pub and_commands_puback.pcapng  narodmon_mqtt_send.bat  test_json_server.bat
apps/: CMakeLists.txt
apps/fths01_svc/: CMakeLists.txt
apps/fths01_svc/src/: main.cpp  stdafx.h
apps/noolite_svc/: CMakeLists.txt
apps/noolite_svc/src/: json_object.h  main.cpp
apps/prototype/: CMakeLists.txt
apps/prototype/src/: BrokerNetServer.h  HttpNetServer.cpp  HttpNetServer.h  MqttBroker.cpp  MqttBroker.h  main.cpp  stdafx.h
apps/tags_svc/: CMakeLists.txt
apps/tags_svc/src/: db.h  db_versioning.cpp  db_versioning.h  main.cpp  mysql_db.cpp  mysql_db.h  tags_db.cpp  tags_db.h  tags_db_ver_1.h  tags_db_versioning.h
apps/tcp_svc/: CMakeLists.txt
apps/tcp_svc/src/: main.cpp  stdafx.h
apps/wirenboard_svc/: CMakeLists.txt
apps/wirenboard_svc/src/: json_object.cpp  main.cpp  stdafx.h
libs/: CMakeLists.txt
libs/boost/: CMakeLists.txt
libs/finglai_fths01/src/: finglai_fths01.cpp
libs/huawei/include/: huawei.h
libs/huawei/src/: huawei.cpp
libs/modbus/: CMakeLists.txt
libs/noolite/: CMakeLists.txt
libs/noolite/include/: noolite.h
libs/noolite/src/: main.cpp
libs/paho-mqtt-c/: CMakeLists.txt
libs/project/: CMakeLists.txt
libs/project/broker/: CMakeLists.txt
libs/project/broker/include/: broker.h
libs/project/broker_server/: CMakeLists.txt
libs/project/broker_server/include/: broker_server.h
libs/project/broker_server/src/: broker_server.cpp  stdafx.h
libs/project/finglai_fths01/: CMakeLists.txt
libs/project/finglai_fths01/include/: finglai_fths01.h
libs/project/finglai_fths01/src/: finglai_fths01.cpp
libs/project/http_client/: CMakeLists.txt
libs/project/http_client/include/: http_client.h
libs/project/http_client/src/: http_client.cpp  stdafx.h
libs/project/http_server/: CMakeLists.txt
libs/project/http_server/include/: http_server.h
libs/project/http_server/src/: http_request.cpp  http_request.h  http_response.cpp  http_response.h  http_server.cpp  http_session.cpp  http_session.h  stdafx.h
libs/project/huawei/: CMakeLists.txt
libs/project/huawei/include/: huawei.h
libs/project/json_http_client/: CMakeLists.txt
libs/project/json_http_client/include/: json_http_client.h
libs/project/json_http_server/: CMakeLists.txt
libs/project/json_http_server/include/: json_http_server.h
libs/project/json_http_server/src/: json_http_server.cpp  stdafx.h
libs/project/logger/: CMakeLists.txt
libs/project/logger/include/: logger.h
libs/project/logger/src/: logger.cpp
libs/project/messages/: CMakeLists.txt
libs/project/messages/include/: messages.h
libs/project/messages/src/: messages.cpp  stdafx.h
libs/project/modbus/: CMakeLists.txt
libs/project/modbus/include/: modbus.h
libs/project/modbus/src/: modbus.cpp
libs/project/mqtt_broker/: CMakeLists.txt
libs/project/mqtt_broker/include/: mqtt_broker.h
libs/project/mqtt_broker/src/: mqtt_broker.cpp
libs/project/net_server/: CMakeLists.txt
libs/project/net_server/include/: net_server.h
libs/project/noolite/: CMakeLists.txt
libs/project/noolite/include/: device_info.h  dongle.h  dongle_mode.h
libs/project/noolite/src/: dongle.cpp  noolite.cpp
libs/project/noolite/src/noolite/: answer.h  cmd.h  control.h  dongle_packet.h  footer.h  header.h  packet.h
libs/project/serial/: CMakeLists.txt
libs/project/serial/include/: serial.h
libs/project/serial/src/: serial.cpp
libs/project/wirenboard/: CMakeLists.txt
libs/project/wirenboard/doc/: Modbus.htm  описание.htm  погрешности.htm
libs/project/wirenboard/doc/Modbus_files/: load.php
libs/project/wirenboard/doc/описание_files/: load(1).php  load.php
libs/project/wirenboard/doc/погрешности_files/: load.php
libs/project/wirenboard/include/: wirenboard.h
libs/project/wirenboard/src/: wirenboard.cpp
libs/sdk/: CMakeLists.txt
libs/sdk/boost/: CMakeLists.txt
libs/sdk/curl/: CMakeLists.txt
libs/sdk/libmysql/: CMakeLists.txt
libs/sdk/paho-mqtt-c/: CMakeLists.txt
libs/sdk/rapidjson/: CMakeLists.txt
libs/serial/: CMakeLists.txt
new/: CMakeLists.txt
new/AAA/: Aaa.cpp  Aaa.h  CMakeLists.txt
new/BBB/: Bbb.cpp  Bbb.h  CMakeLists.txt
new/CCC/: CMakeLists.txt  Ccc.cpp
sdk/: build.bat  build_boost_1_73_0.bat  build_boost_1_77_0.bat  build_curl_7_78_0.bat  build_paho.mqtt.c_1.3.9.bat  build_paho.mqtt.c_1_3_9.bat
sdk/curl-7.78.0/: CMakeLists.txt
sdk/curl-7.78.0/lib/: http_digest.c
sdk/libmysql-5.7.34/x32/include/: my_config.h
sdk/libmysql-5.7.34/x32/lib/: libmysql.lib
sdk/libmysql-5.7.34/x64/lib/: libmysql.lib
sdk/paho.mqtt.c/: CMakeLists.txt
sdk/paho.mqtt.c_1_3_9/: CMakeLists.txt
shelly релюхи/: txt
src/: CMakeLists.txt
src/devices/: CMakeLists.txt
src/devices/sms/: CMakeLists.txt
src/devices/sms/src/: Broker.h  BrokerDlgServer.cpp  BrokerDlgServer.h  BrokerNetServer.cpp  BrokerNetServer.h  HttpDlgServer.cpp  HttpNetServer.cpp  MqttBroker.cpp  MqttBroker.h  MqttNetServer.cpp  MqttNetServer.h  main.cpp  stdafx.h
src/devices/sms/src/common/: Broker.h  DlgServer.h  NetServer.h
src/drivers/: CMakeLists.txt
src/drivers/noolite/: CMakeLists.txt
