add_subdirectory(net_server)
add_subdirectory(broker)
add_subdirectory(broker_server)

add_subdirectory(http_server)
add_subdirectory(json_http_server)

add_subdirectory(noolite)
add_subdirectory(finglai_fths01)
add_subdirectory(modbus)
add_subdirectory(wirenboard)
add_subdirectory(huawei)
add_subdirectory(serial)
add_subdirectory(logger)
